helm/100_home-assistant/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.200
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.local.naguiar.dev`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: home-assistant
          port: http
  tls:
    secretName: certificate-tls
