helm/100_home-assistant/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations: {}
    #    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
spec:
#  ingressClassName: ""
  tls: []
#    - hosts:
#        - REPLACEME
#      secretName: REPLACEME
  rules:
    - host: home-assistant.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: "http"
    - host: ha.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: "http"
